2004-09-01  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* htmlparse.tcl: Accepted patch by David Graveraux fixing a number
	  of problems with HTML entities.
	  This fixes [Tcllib SF Bug 1018574].

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6.1 ========================
	* 

2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6 ========================
	* 

2004-02-09  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* htmlparse.tcl:  When changing the 'walk' method of 'struct::tree'
	* htmlparse.test: adaption of this module was forgotten. Fixed.
	  Also fixed problem with usage of 8.3'ism in 'mapEscapes.

2003-12-16  Joe English  <jenglish@users.sourceforge.net>

	* htmlparse.tcl: Fix for bug #861277 (backslashes in content)
	* htmlparse.test: Added test case.

2003-10-24  Andreas Kupries  <andreask@activestate.com>

	* htmlparse.tcl: Applied [Patch 823346] by Michael Schlenker
	  <mic42@users.sourceforge.net>. Cleans the code up a bit, using
	  faster string ops in place of regexes and -subs, where possible.

2003-10-21  Andreas Kupries  <andreask@activestate.com>

	* htmlparse.man: Extended documentation of command '2tree' with
	  description of how the found tags and text is stored in the
	  nodes of the tree [Bug 827645].

2003-08-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pkgIndex.tcl:
	* htmlparse.test:
	* htmlparse.man:
	* htmlparse.tcl: Updated to use struct v2 when handling trees
	  (Different way of accessing attributes). Bumped version number
	  up to the next major version (1.0) for this incompatible change.

2003-05-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.4 ========================
	* 

2003-04-11  Andreas Kupries  <andreask@activestate.com>

	* htmlparse.tcl:
	* htmlparse.man:
	* pkgIndex.tcl:  Set version of the package to to 0.3.1.
